@@ -1,3 +1,5 @@
+Allow Linux to use Token Ring again as Linux does not have any more hardware
+specific code. BPF needs a patch for Token Ring support.
 Dawin is now reported to work.
 cleanmetas now inserts a \ when it finds a ' so we get the proper
 values in our .info files when read by a shell.
